--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         </div>
         <div></div>
-        <input type="button" value="Enviar" id="btnEnviar" onclick="verificar()">
+        <input type="button" value="Verificar" id="btnEnviar" onclick="verificar()">
                 <!--Ano de nascimento
        
         Botão verificar
